fix: question answer pre-wrap

--- a/web/src/style.less
+++ b/web/src/style.less
@@ -11,3 +11,7 @@
   color: #f0506e;
   font-size: 0.875rem;
 }
+
+.pre-wrap {
+  white-space: pre-wrap;
+}
